# crab-clean

./: .gitignore  ARCHITECTURE.excalidraw  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  PRODUCT.md  README.md  declutter_design.excalidraw
src/: cli.rs  core.rs  error.rs  lib.rs  main.rs
src/cli/: app.rs  commands.rs
src/cli/commands/: duplicate.rs  unused.rs
src/config/: settings.rs
src/core/: algorithms.rs  analyser.rs  analyzer.rs  scanner.rs
src/core/algorithms/: duplicate_algo.rs  unused_algo.rs
src/utils/: progress.rs
tests/: integration_test.rs
